# paperkite

./: .isort.cfg  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
chat/: admin.py  forms.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chatuser_alter_conversationuser_user_and_more.py  0003_rename_user_conversationuser_chat_user_and_more.py  0004_rename_conversationuser_conversationchatuser.py
chat/static/css/: conversations.css  index.css  login.css  register.css
chat/templates/chat/: base.html  conversation.html  conversations.html  index.html  login.html  message.html  messages.html  register.html
paperkite/: asgi.py  settings.py  urls.py  wsgi.py
