[tool.poetry]
name = "paperkite"
version = "0.1.0"
description = "Multi-user chat system using django"
authors = ["chacychavez <chacychavez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
